-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------
2011-11-19	jluis
	* mgd77/mgd77.c:	Fix memory allocation bug in MGD77_Read_Header_Sequence() where 
				it was reading MGD77_RECORD_LENGTH records into a shorter 
				MGD77_HEADER_LENGTH longer variable.

2011-11-18	pwessel
	* *.c:			Make sure that incrementally allocated memory for structures
				that contain pointers is initialized to NULL before use.
	* grdview.c:		The contouring could suffer from the same round-off issues that
				affected grdcontour (and fixed back in 2004).  Now same fix is
				applied in grdview.  Also set -S to 0 as stated in man page;
				this matches default in grdcontour as well.

2011-11-17	pwessel
	* grdlandmask.c:	Now recognizes a global grid when nx*dx == 360 also.
	* nearneighbor.c:	--"--
	* grdcut.c:		--"--
	* grdfilter.c:		--"--
	* grdinfo.c:		--"--
	* grdimage.c:		--"--
	* misc/dimfilter.c:	--"--

2011-11-15	pwessel
	* gmt_unique.h:		Updated with the new common options.
	* gmt_init.c:		No longer accept lower case -x -y as in GMT 4 (inadvertently).

2011-11-13	pwessel
	* gmt_grdio.c:		Need to reset zmin/zmax when region was temporarily expanded to
				include data boundary rows/cols.
	* grdinfo.c:		Modifier -Ts<dz> returns a symmetrical range about zero.
	* grdpaste.c:		Had trouble shuffling longitudes correctly for geographic grids.
	* *.c:			Improved freeing of allocated memory as reported under --enable-devdebug
			
2011-11-12	pwessel
	* gmtmercmap.c:		New example of API use: Create a shaded-relief Mercator map using
				Etopo 1|2|5m global relief, with optional color bar.  Option -D
				makes no map but writes equivalent Bourne shell or cshell script.

	* gmt_support.c:	Resampling of CPTs did not initialize the i_dz variables, resulting
				in discontinuous colors for continuous color maps.

2011-11-11	remko